# axiom-mcp-servers

./: .gitignore  README.md  pyproject.toml
servers/filesystem/: README.md  config.yaml  server.py  test_server.py
servers/gdrive/: README.md
servers/github/: README.md  config.yaml  server.py
shared/: base_server.py  utils.py
